--- a/myweather/style.css
+++ b/myweather/style.css
@@ -21,18 +21,37 @@ h1{
     padding-top: 2rem;
 }
 
-.wrapper{
-    /* display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center; */
-    width: 100wh;
-    height: 100vh;
+body{
     color: var(--colorLight2);
     background: rgb(54,141,145);
    background: linear-gradient(148deg, rgb(17, 76, 80) 0%, rgb(4, 74, 81) 15%, rgb(9, 146, 135) 100%);
-
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 1.5px;
+    display: flex;
+    align-items: center;
+    min-height: 100vh;
+    flex-direction: column;
 }
+
+.wrapper{
+    width: 100%;
+    max-width: 650px;
+    border-radius: 10px;
+    padding: 15px;
+}
+
+/* .wrapper{
+    /* display: flex;
+    flex-direction: column;
+    align-items: center
+    width: 100wh;
+    height: 100vh;
+   
+} */
+
+
 
 .tab-container{
     width: 90%;
@@ -64,6 +83,7 @@ h1{
     justify-content: center;
     flex-direction: column;
     margin-block: 2rem;
+
 }
 
 .button{
@@ -278,4 +298,31 @@ h1{
     font-weight: 600;
     margin-top: 1rem;
     text-align: center;
+}
+
+@media screen and (max-width:530px) {
+    /* .weather-container{
+        height: 100%;
+        background-color: rgb(54,141,145);
+        background: linear-gradient(148deg, rgb(17, 76, 80) 0%, rgb(4, 74, 81) 15%, rgb(9, 146, 135) 100%);
+    } */
+    .parameter-container {
+        flex-direction: column;
+        height: auto; /* Set height to auto to accommodate content */
+    }
+
+    .parameter {
+        width: 100%;
+        max-width: none; /* Remove max-width to allow full width */
+    }
+}
+@media screen and (max-width:3800px){
+    h1{
+        font-size: 1.5rem;
+    }
+}
+@media screen and (max-width:270px){
+    h1{
+        font-size: 1rem;
+    }
 }
