--- a/my-desk/my-desk/style.css
+++ b/my-desk/my-desk/style.css
@@ -1,8 +1,12 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Poor+Story&display=swap');
+
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Poor Story', sans-serif;
 }
 
 body{
@@ -19,12 +23,103 @@ body{
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    position: relative;
 }
+
+#cross{
+      display: none;
+      margin-top: 1rem;
+      margin-right: 1rem;
+      position: absolute;
+      right: 0;
+      top: 10%;
+  }
+  
+  #cross.active{
+      display:flex;
+  }
+
+
+#cross #crossBtn{
+    border: none;
+}
+
+#my-list{
+    width: 100%;
+    height: 100%;
+    display:none;
+    align-items: center;
+    justify-content: start;
+    flex-direction: column;
+    margin-top: 0.5rem;
+}
+
+#my-list.active{
+    display: flex;
+}
+
+.container h1{
+    font-size: 3rem;
+    color: #737373;
+    margin-top: 1.2rem;
+    text-align: center;
+}
+#my-list .list{
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    border-radius: 1rem;
+    padding: 1rem;
+    overflow-y: scroll;
+    padding-left: 5rem;
+    padding-top: 5rem;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5px;
+}
+.list #clockBtn{
+    width: 200px;
+    height: 200px;
+    background-color: #fde6e6;
+    border-radius: 50%;
+    border: none;
+    box-shadow: inset 0 0 20px rgba(244, 168, 158, 0.5);
+    font-size: 2.3rem;
+    font-weight: bold;
+}
+
+.list #calculatorBtn{
+    width: 200px;
+    height: 200px;
+    background-color: #fde6e6;
+    border-radius: 10%;
+    border: none;
+    box-shadow: inset 0 0 20px rgba(164, 131, 197,0.5);
+    margin-left: 3rem;
+}
+
+.list #timerBtn{
+    width: 200px;
+    height: 200px;
+    background-color: #cecece;
+    border-radius: 10%;
+    border: none;
+    box-shadow: inset 0 0 20px rgba(124, 123, 125, 0.5);
+    margin-left: 3rem;
+}
+
+
+
+
+
+
+
+/* <---------------------------------------------CALCULATOR---------------------------------------------> */
 #calculator{
     width: 80%;
     height: 80%;
     background-color: rgba(164, 131, 197,0.5);
-    display: flex;
+    display: none;
     align-items: center;
     flex-direction: column;
     padding-top: 4rem;
@@ -33,6 +128,11 @@ body{
     box-shadow: 0 0 20px rgba(164, 131, 197,0.5);
    
 }
+
+#calculator.active{
+    display: flex;
+}
+
 #calculator h1{
     font-size: 2.5rem;
     color: #fff;
@@ -108,3 +208,317 @@ body{
          height: 3rem;
     }
 }
+
+
+
+
+/* <---------------------------------------------CLOCK---------------------------------------------> */
+#clock{
+    width: 80%;
+    height: 80%;
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+    background-color: #fde6e6;
+    padding-top: 2rem;
+    align-items: center;
+    margin: 0 auto;
+    border-radius: 1rem;
+}
+
+#clock.active{
+    display: flex;
+}
+
+#clock h1{
+    font-size: 2.5rem;
+    color: #f2b5b5;
+    margin-bottom: 10px;
+}
+#clock .clock-display{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #f89a9a;
+    font-size: 2rem;
+    margin-top: 1rem;
+}
+
+.wall-clock{
+   width: 500px;
+   height: 500px;
+   background-color: transparent;
+   border: #c56767 2px solid;
+   border-radius: 50%;
+   aspect-ratio: 1/1;
+   position: relative;
+   box-shadow: inset 0 0 20px rgba(244, 168, 158, 0.5);
+}
+.wall-clock .needles{
+    width: 100%;
+    height: 100%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+ .needles #second-hand, .needles #minute-hand, .needles #hour-hand{
+    position: absolute;
+    background-color: #f89a9a;
+    border-radius: 10px;
+    transform-origin: bottom;
+}
+
+#second-hand{
+   width: 0.5%;
+   height: 40%;
+   top: 7%;
+   left: 49.25%;
+   opacity: 0.8;
+   
+}
+#minute-hand{
+    width: 3px;
+    height: 120px;
+    z-index: 99;
+    top: 22%; 
+}
+
+#hour-hand{
+    width: 1.3%;
+    height: 22%;
+    top: 25%;
+    left: 49.50%;
+    opacity: 0.8;
+}
+.needles #circle{
+    width: 1.5rem;
+    height: 1.5rem;
+    background-color: #c56767;
+    border-radius: 50%;
+    position: absolute;
+    top: 44.45%;
+    z-index: 100;
+
+}
+
+.wall-clock .numbers p{
+    position: absolute;
+    font-size: 1rem;
+    color: #c56767;
+    font-weight: 600;
+    z-index: 100;
+    top: 8%;
+}
+
+.wall-clock .numbers p:nth-child(1){
+    left:  70%;
+    top: 10%;
+}
+
+.wall-clock .numbers p:nth-child(2){
+    left:  87%;
+    top: 25%;
+}
+
+.wall-clock .numbers p:nth-child(3){
+    left:  92%;
+    top: 44%;
+}
+
+.wall-clock .numbers p:nth-child(4){
+    left:  87%;
+    top: 65%;
+}
+
+.wall-clock .numbers p:nth-child(5){
+    left:  74%;
+    top: 80%;
+}
+
+.wall-clock .numbers p:nth-child(6){
+    left:  50%;
+    top: 90%;
+}
+
+.wall-clock .numbers p:nth-child(7){
+    left:  26%;
+    top: 80%;
+}
+
+.wall-clock .numbers p:nth-child(8){
+    left:  13%;
+    top: 65%;
+}
+
+
+.wall-clock .numbers p:nth-child(9){
+    left:  8%;
+    top: 44%;
+}
+
+.wall-clock .numbers p:nth-child(10){
+    left:  13%;
+    top: 25%;
+}
+
+.wall-clock .numbers p:nth-child(11){
+    left:  26%;
+    top: 10%;
+}
+
+.wall-clock .numbers p:nth-child(12){
+    left:  50%;
+    top: 2%;
+}
+
+
+
+
+
+/* <-------------------------------T I M E R-------------------------------------> */
+#timer{
+    width: 80%;
+    height: 80%;
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+    padding-top: 5rem;
+    margin: 0 auto;
+    background-color: #cecece;
+    border-radius: 1rem;
+}
+
+#timer.active{
+    display: flex;
+}
+.timer-container,.show-timer-container{
+    display: none;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+
+}
+.timer-display,#minute-display,#second-display,#hour,#minute,#second{
+    width: 70px;
+    background-color: black;
+    height: 60px;
+    overflow: auto;
+    scroll-behavior: smooth;
+    position: relative;
+    text-align: center;
+    padding: 10px 10px;
+    border-radius: 10px;
+    scroll-snap-type: y mandatory;
+    
+    
+}
+
+.timer-display div, #minute-display div, #second-display div{
+    scroll-snap-align: center;
+    scroll-snap-stop: always;
+    scroll-snap-coordinate: 0 0;
+    scroll-snap-destination: 0 0;
+    scroll-snap-points-y: repeat(100%);
+    scroll-snap-type: mandatory;
+    scroll-snap-type: y mandatory;
+    scroll-snap-type: y mandatory;
+    scroll-snap-type: y;
+    transition: all 0.2s ease-in-out;
+}
+.timer-display div:hover, #minute-display div:hover, #second-display div:hover{
+    transform: scale(1.1);
+}
+.timer-container.active{
+    display: flex;
+}
+.show-timer-container.active{
+    display: flex;
+}
+
+/* Hide scrollbar in WebKit-based browsers (e.g., Chrome and Safari) */
+::-webkit-scrollbar {
+    width: 0;
+    background: transparent; /* This makes the scrollbar track invisible */
+  }
+  
+  /* Hide scrollbar in Firefox */
+  * {
+    scrollbar-width: none;
+  }
+  
+  /* For Firefox, you can also style the scrollbar if you want */
+  *::-webkit-scrollbar-thumb {
+    background: transparent; /* This makes the scrollbar thumb (handle) invisible in WebKit-based browsers */
+  }
+
+.timer-display div, #minute-display div, #second-display div,.show-timer-container div{
+    font-size: 2rem;
+    color: #fff;
+    font-weight: bold;
+    /* border-radius: 10px; */
+    z-index: 100;
+    /* padding: 10px 10px; */
+    margin-bottom: 8px;
+    text-align: center;
+}
+
+
+#timer .buttons{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    margin-top: 10px;
+}
+#timer button{
+   padding: 10px 15px;
+   font-size: 2rem;
+   font-weight: bold;
+    border-radius: 10px;
+    border: 1px solid gray;
+    cursor: pointer;
+    transition: all 0.2s ease-in-out;
+}
+#timer button:nth-child(1){
+    background-color: gray;
+}
+#timer button:nth-child(2){
+    background-color: green;
+}
+#timer button:nth-child(3){
+    background-color: greenyellow;
+}
+
+#timer button:nth-child(1):hover{
+    background-color: #fde6e6;
+    color: #000;
+}
+
+#timer button:nth-child(2):hover{
+    background-color: #fff;
+    color: green;
+}
+
+#timer button:nth-child(3):hover{
+    background-color: #fff;
+    color: greenyellow;
+}
+@media  screen and (max-width: 455px) {
+    #timer .buttons{
+       flex-direction: column;
+    }
+    
+}
+
+@media  screen and (max-width: 220px) {
+    #timer .timer-container, .show-timer-container{
+       flex-direction: column;
+    }
+    
+}
+
+/* <---------------------------------------------STOPWATCH---------------------------------------------> */
