--- a/my-desk/my-desk/style.css
+++ b/my-desk/my-desk/style.css
@@ -1,5 +1,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poor+Story&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,500;1,300&display=swap');
 
 
 *{
@@ -111,6 +112,14 @@ body{
 
 
 
+    .list #calendarBtn{
+        width: 200px;
+        height: 200px;
+        background-color: #ebe3d5;
+        border-radius: 10%;
+        border: none;
+       box-shadow: inset 0 0 20px #c6b39e; margin-left: 3rem;
+    }
 
 
 
@@ -521,4 +530,150 @@ body{
     
 }
 
-/* <---------------------------------------------STOPWATCH---------------------------------------------> */
+/* <---------------------------------------------CALENDAR---------------------------------------------> */
+:root{
+    --primary-clr: #EBE3D5;
+    --secondary-clr: #B0A695;
+    --tertiary-clr: #776B5D ;
+    --white-clr: #F3EEEA;
+}
+
+#calendar{
+    width: 80%;
+    height: 80%;
+    background-color: var(--primary-clr);
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
+    color: var(--tertiary-clr);
+}
+#calendar{
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+#calendar.active{
+    display: flex;
+}
+
+.calendar-container{
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.calendar-left{
+    width: 100%;
+    max-width: 700px;
+    margin: 0 auto;
+    padding: 2rem;
+    background-color: var(--white-clr);
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 3rem;
+}
+#calendar .calendar::after, #calendar .calendar::before{
+    content: '';
+    display: block;
+    clear: both;
+}
+
+#calendar .calendar{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#calendar .months{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 1rem;
+    gap: 1rem;
+}
+
+#calendar .months .prev ,#calendar .months .next{
+    cursor: pointer;
+    transition: all 0.3s ease;
+    border: none;
+    background-color: transparent;
+    outline: none;
+}
+
+#calendar .months .prev :hover ,#calendar .months .next:hover  {
+   background-color: var(--primary-clr);
+   padding: 5px;
+    border-radius: 10px;
+   
+}
+
+/* .next:hover{
+    color: var(--secondary-clr);
+    background-color: red;
+} */
+
+#calendar .days , .dates{
+   display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    width: 100%;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 10px;
+   margin-bottom: 2rem;
+}
+
+#calendar .days .day{
+    width: 50px;
+    height: 50px;
+   text-align: center;
+    padding: 0.5rem;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+#calendar .days .day:hover{
+    background-color: var(--secondary-clr);
+    color: var(--white-clr);
+}
+
+
+h3{
+    font-size: 2rem;
+    font-weight: 500;
+    color: var(--tertiary-clr);
+    margin-bottom: 1rem;
+}
+
+#calendar .dates .date{
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    padding: 0.5rem;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+#calendar .dates .date.todays-date{
+    background-color: var(--secondary-clr);
+    color: var(--white-clr);
+}
+
+#calendar .dates .date:hover{
+    color: var(--secondary-clr);
+}
+
+.dates .prev-date, .dates .next-date{
+    opacity: 0.5;
+}
+
+.dates .prev-date:hover, .dates .next-date:hover{
+    color: var(--secondary-clr);
+}
